@@ -1,15 +1,12 @@
 import com.example.McpServerApplication;
 import com.example.mcp.model.DataBack;
-import com.example.mcp.model.DataLabel;
 import com.example.mcp.repository.VvtrData;
 import com.example.mcp.tool.Vvtr;
 import com.example.mcp.util.CsvMerger;
 import jakarta.annotation.Resource;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.params.shadow.com.univocity.parsers.csv.Csv;
 import org.springframework.boot.test.context.SpringBootTest;
 
-import java.io.IOException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
@@ -27,24 +24,21 @@ class ClientStdio {
     public void testVvtr() throws Exception {
         List<String> paths = vvtr.getFundData("fund", "1d", "501095", "", "");
         System.out.println(paths);
-        System.out.printf(vvtr.getDayData(paths, "501095", 0, 1000));
         System.out.println(vvtr.getDataCount(paths, "1d", "501095"));
         List<Path> path = paths.stream()
                 .map(Paths::get)
-                .collect(Collectors.toList());
-        System.out.println(vvtrData.testData(path, 8));
+                .toList();
 
     }
 
     @Test
     public void testFilterData() throws Exception {
-        List<String> fundData = vvtr.getFundData("fund", "1m", "159206", "", "");
+        List<String> fundData = vvtr.getFundData("fund", "tick", "159001", "", "");
         List<Path> paths = fundData.stream()
                             .map(Paths::get)
                             .toList();
-        System.out.println();
-        DataBack minData = vvtrData.getMinData(paths, "2025-04-01 09:36:00", "2025-04-01 09:55:00", 8);
-        System.out.println(minData.getData());
+        System.out.println(paths.toString());
+        System.out.println(vvtrData.getTickData(paths, "", "", CsvMerger.getCreateTimeIndex(paths.get(0)), 199, 201));
     }
 
 }
